# Gold3

./: .coverage  .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pytest_runner.py  .pytest_runner.py.bak  .tmp_installed_apps.json  AiReadme.md  CELERY-README.md  DEV-README.md  Dockerfile  EXTERNAL_DB_README.md  Gold3_Masking_Coverage_Report.xlsx  Makefile  README.md  README_POETRY.md  SETTINGS_REORGANIZATION_README.md  WINDOWS_NOTIFICATIONS_MIGRATION.md  __init__.py  __init__.py.bak  _test_urls_repo_root.py  accomplishments.md  activate_venv.bat  activate_venv.ps1  analyze_masking_coverage.sql  backup_table_counts.txt  bin_functions.py  bulk_copy_production.ps1  bulk_import_all.ps1  celery_app.py  celery_flower_page.wiki  cleanup_backup.ps1  compare_all_tables.ps1  compare_table_counts.ps1  comprehensive_field_masking.py  comprehensive_field_masking.sql  conftest.py  (+75 more)
.scripts/: check_accounts_view.py  check_accounts_view.py.bak  check_accounts_views.py  check_accounts_views.py.bak  check_includes.py  check_includes.py.bak  check_settings.py  check_settings.py.bak  check_try_includes.py  check_try_includes.py.bak  curl_root.py  curl_root.py.bak  debug_import_urls.py  debug_import_urls.py.bak  dev_auto_login_result.txt  fetch_root.py  fetch_root.py.bak  get_dev_admin_id.py  get_dev_admin_id.py.bak  get_first_user_id.py  get_first_user_id.py.bak  http_check_login_csrf.py  http_check_login_csrf.py.bak  http_check_root.py  http_check_root.py.bak  import_accounts_urls.py  import_accounts_urls.py.bak  import_workflow_urls.py  import_workflow_urls.py.bak  inspect_urls.py  inspect_urls.py.bak  post_login_dev.py  post_login_dev.py.bak  post_login_dev_debug.py  post_login_dev_debug.py.bak  print_repo_urls.py  print_repo_urls.py.bak  root.html  smoke_test_search.py  test_dev_auto_login.py  (+5 more)
apache/: dloader_wsgi_conf.py  wsgi_conf.py
api/: __init__.py  settings.py
artifacts/: pytest_bin_email_after_template.txt  pytest_bin_email_test_verbose.txt  pytest_bin_etools_test_verbose.txt  pytest_failures.json  pytest_full_results.xml  pytest_full_run.txt  pytest_joblog_basic_verbose.txt  pytest_output.txt  pytest_results.xml  pytest_targeted_after_fixes.txt  pytest_workflow_job_integration_after_init.txt  pytest_workflow_job_integration_after_init_verbose.txt  pytest_workflow_job_integration_verbose.txt  pytest_xml_io_jdf_reader_verbose.txt
config/: .env.azure.example  .env.prod.example  Dockerfile  __init__.py  docker-compose.dev.yml  docker-compose.replicate.yml  docker-compose.yml  local_settings.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-notifications.txt  requirements.txt  ruff.toml  secrets_template.py  settings.py  settings_base.py  settings_common.py  settings_development.py  settings_dloader.py  settings_production.py  urls.py
daemons/: __init__.py  billing_script_original.py
data/: backup_table_counts.txt  dev_table_counts.txt  fixtures_dev.json  pytest_local_path.py  pytest_local_path.py.bak
depends/: __init__.py  install_deps_ubuntu.sh  upgrade_deps_ubuntu.sh
deploy/: AZURE_DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  azure-quick-start.ps1  azure-update.ps1  azuredeploy.json  azuredeploy.parameters.json  deploy-to-azure.ps1  nginx.conf  notification_service_instructions.md
dev/: README.md  _dump_db_settings.py  _ensure_admin_and_session.py  _print_db_settings.py  _print_db_settings2.py  accounts_test_output.txt  admin_session_cookie.txt  aggressive_fix_run.txt  create_dev_admin.py  create_dev_admin.py.bak  db_probe.json  db_settings_active.json  db_settings_effective.json  db_settings_effective2.json  db_settings_effective_after_guard.txt  dev_set_session.html  docker-compose.yml  dump_out.txt  dump_run_direct.txt  ensure_admin_after_toggle.txt  ensure_admin_output.txt  ensure_admin_output2.txt  ensure_gchub.py  ensure_gchub.txt  ensure_gchub_pip_install.txt  ensure_gchub_pip_upgrade.txt  ensure_gchub_run.txt  fetch2_out.txt  fetch_out.txt  joblog_test_output.txt  makemigrations_all.txt  makemigrations_art_req.txt  makemigrations_art_req_after_choice_fix.txt  makemigrations_art_req_after_fix.txt  makemigrations_art_req_final_check.txt  makemigrations_gchub.txt  makemigrations_manual.txt  makemigrations_output.txt  makemigrations_wrapper.ps1  migrate_after_choice_fix.txt  (+51 more)
dev_tools/: find_similar_colors.py
docker/: README-docker.md
docs/: AiReadme.md  CELERY-README.md  CELERY-STARTUP.md  CELERY_BEAT_README.md  CELERY_README.md  COMPREHENSIVE_MASKING_README.md  CONTRIBUTING.md  DATA_MASKING_README.md  DEV-README.md  DEVELOPER.md  DEVELOPMENT_INFRASTRUCTURE.md  DEVELOPMENT_QUICK_START.md  DEV_TOOLS_README.md  Dockerfile.wiki  EXTERNAL_DB_README.md  FLOWER_README.md  GRAFANA_README.md  MASKING_COVERAGE_REPORT.md  POSTGRESQL_DATABASE_OBJECTS.md  PROMETHEUS_README.md  README.DEV-FONT.md  README.md  README_POETRY.md  REDIS_README.md  WINDOWS_NOTIFICATIONS_MIGRATION.md  azure-costs.md  celery_page.wiki  dev_tools_page.wiki  errors-reported.md  external_db_page.wiki  grafana_page.wiki  homepage_minimal.txt  main_readme_page.wiki  nextsteps.md  redis_page.wiki  wiki_page5.html  wiki_table_of_contents.wiki
frontend/: package.json  tailwind.config.cjs  vite.config.js
gchub_db/: __init__.py  _test_urls_fallback.py  conftest.py.backup  dev_views.py  settings.py  test_settings.py  test_urls.py  urls.py  views.py  worker_settings.py
html/: 404.html  500.html  503.html  base.html  home.html  js_pagination.html  pagination_bar.html  standard.html  standard_popup.html  yui_container_includes.html
includes/: EXIF.py  EXIF.py.bak  __init__.py  extra_context.py  form_utils.py  fs_api.py  fs_test.py  general_funcs.py  gold_json.py  model_fields.py  netgrowl.py  notification_manager.py  widgets.py  windows_notifications.py
launchd/: gch.script.approvalmove.plist  gch.script.autoftp.plist  gch.script.backuppgdump.plist  gch.script.ftphughesjob.plist  gch.script.getqadcasepacks.plist  gch.script.getqadprintgroups.plist  gch.script.inkcoverage.plist  gch.script.jobfolderaudit.plist  gch.script.thumbnailer.plist
(+1139 files in other folders)
